--- a/grid-test.html
+++ b/grid-test.html
@@ -12,6 +12,9 @@
             --shell: #f3f8f9;
             --accent: #d9ebee;
             --progress: #cfe5e8;
+            --shadow-base: 0 2px 6px rgba(0, 0, 0, 0.02);
+            --move-duration: 720ms;
+            --move-ease: cubic-bezier(0.22, 0.61, 0.36, 1);
         }
 
         * {
@@ -75,18 +78,24 @@
             background: #fff;
             border-radius: 4px;
             border: 1px solid var(--border);
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.02);
+            --lift: 0px;
+            --depth-scale: 1;
+            --shadow: var(--shadow-base);
+            --depth-z: 1;
+            box-shadow: var(--shadow);
             text-align: center;
             cursor: pointer;
             color: var(--ink);
+            transform: translateY(var(--lift)) scale(var(--depth-scale));
+            z-index: var(--depth-z);
             transition:
-                transform 480ms cubic-bezier(0.22, 0.61, 0.36, 1),
+                transform var(--move-duration) var(--move-ease),
+                box-shadow var(--move-duration) ease,
                 background-color 220ms ease,
                 color 220ms ease,
-                border-color 220ms ease,
-                box-shadow 220ms ease;
+                border-color 220ms ease;
             user-select: none;
-            will-change: transform;
+            will-change: transform, box-shadow;
         }
 
         .cell:hover {
@@ -162,10 +171,19 @@
         const letters = "ABCDEFGH";
         const totalSteps = 12;
         const forwardSteps = 6;
-        const moveDuration = 480; // keep in sync with CSS transform duration
-        const stepDelay = moveDuration + 120; // ms between steps for smoother feel
+        const moveDuration = 720; // Keep in sync with CSS --move-duration
+        const stepDelay = moveDuration + 220; // ms between steps for smoother feel
         const waveDuration = 650;
         const waveStagger = 80;
+        const baseShadow = "0 2px 6px rgba(0, 0, 0, 0.02)";
+        const depthStates = [
+            { scale: 1.06, lift: -14, shadow: "0 16px 30px rgba(30, 70, 88, 0.25)", z: 6 },
+            { scale: 1.03, lift: -12, shadow: "0 14px 26px rgba(30, 70, 88, 0.2)", z: 5 },
+            { scale: 1.01, lift: -10, shadow: "0 12px 22px rgba(30, 70, 88, 0.16)", z: 4 },
+            { scale: 0.99, lift: -8, shadow: "0 10px 18px rgba(30, 70, 88, 0.12)", z: 3 },
+            { scale: 0.97, lift: -6, shadow: "0 8px 14px rgba(30, 70, 88, 0.1)", z: 2 },
+            { scale: 0.95, lift: -4, shadow: "0 6px 10px rgba(30, 70, 88, 0.08)", z: 1 }
+        ];
 
         const grid = document.getElementById("grid");
         const progressBar = document.getElementById("progress");
@@ -183,6 +201,7 @@
         let isAnimating = false;
         let activeId = null;
         let progressSteps = [];
+        let settleTimeout = null;
         const coordsById = new Map();
 
         function idToCoord(id) {
@@ -228,6 +247,35 @@
             });
         }
 
+        function applyDepthStates(items) {
+            items.forEach((el) => {
+                const level = depthStates[Math.floor(Math.random() * depthStates.length)];
+                el.style.setProperty("--lift", `${level.lift}px`);
+                el.style.setProperty("--depth-scale", level.scale);
+                el.style.setProperty("--shadow", level.shadow);
+                el.style.zIndex = level.z;
+            });
+        }
+
+        function settleDepth(items) {
+            const moveEase =
+                getComputedStyle(grid).getPropertyValue("--move-ease") ||
+                "cubic-bezier(0.22, 0.61, 0.36, 1)";
+            items.forEach((el) => {
+                el.style.transition = `transform 220ms ${moveEase.trim()}, box-shadow 220ms ease`;
+                el.style.setProperty("--lift", "0px");
+                el.style.setProperty("--depth-scale", "1");
+                el.style.setProperty("--shadow", baseShadow);
+                el.style.zIndex = "";
+            });
+            // Reset back to default timings for the next move.
+            setTimeout(() => {
+                items.forEach((el) => {
+                    el.style.transition = "";
+                });
+            }, 260);
+        }
+
         function shuffleDifferent(order) {
             const next = [...order];
             for (let i = next.length - 1; i > 0; i--) {
@@ -254,21 +302,32 @@
 
             const lastRects = new Map(items.map((el) => [el, el.getBoundingClientRect()]));
 
+            if (settleTimeout) {
+                clearTimeout(settleTimeout);
+            }
+            items.forEach((el) => {
+                el.style.transition = "none";
+            });
+            applyDepthStates(items);
+
             items.forEach((el) => {
                 const first = firstRects.get(el);
                 const last = lastRects.get(el);
                 const dx = first.left - last.left;
                 const dy = first.top - last.top;
-                el.style.transition = "none";
-                el.style.transform = `translate(${dx}px, ${dy}px)`;
+                el.style.transform = `translate(${dx}px, ${dy}px) translateY(var(--lift)) scale(var(--depth-scale))`;
             });
 
             // Force reflow, then allow the transition to animate toward the new positions.
             grid.getBoundingClientRect();
             items.forEach((el) => {
                 el.style.transition = "";
-                el.style.transform = "";
+                el.style.transform = "translateY(var(--lift)) scale(var(--depth-scale))";
             });
+
+            settleTimeout = setTimeout(() => {
+                settleDepth(items);
+            }, moveDuration);
         }
 
         function buildSequence() {
